  Unit tests now run with an embedded derby database
  Added run_derby_server and shutdown_derby_server to ant build file
  Created lib/derby for the derby jars
  Removed mysql and oracle jdbc drivers due to licensing
  EntityModel.stActive and activeStateGroup moved to EntityPanel, where they belong
  Added IntelliJ project file
  Excluded *Stub.class files from jminor-server.jar
  Added user authentication (scott/tiger) to demo db
  Database.getURL() and onDisconnect() now takes a connectionProperties parameter for derby user authentication
  FrameworkSettings.AUTHENTICATION_REQUIRED property added and used in EntityApplicationPanel.loginRequired()
  IdSource constant ID_ prefix removed
  Entity.equal() renamed to isEqual
  FrameworkSettings.FILTER_QUERY_BY_MASTER property value is now true by default
  Default usernames are now saved in preferences per application
  UiUtil.selectAllOnFocusGained(JTextComponent) added
  FrameworkSettings.USE_NUMBER_FORMAT_GROUPING property added, default true
  Refactored EntityTableModel.EntityJRDataSource out of EntityTableModel which no longer implements JRDataSource hence no more reportPrintIterator and currentReportRecord fields
  EntityTableModel.initReportIterator() renamed to initializeReportIterator and made protected
  Removed a few probably ill-placed synchronized keywords, they simply gave the false illusion of thread-secure stuff
  EntityPanel constructor now takes an EntityModel parameter
  EntityPanel.setModel() removed
  UiUtil.showInDialog() improved button caption and mnemonic
  EntityTableModel constructor parameters reordered
  EntityLookupModel, EntityComboBoxModel, EntityListModel and EntityModel constructor parameters reordered for consistency
  EntityPanel.compactPanel field renamed to compactLayout
  EntityPanel.initialize(), moved some code to initializeUI() and bindEvents()
  EntityTablePanel.initializeSummaryPanel() now uses the underlying JTable column model when initializing summary panels