@@ -19,5 +19,5 @@ VALUES (7499, 'ALLEN', 'SALESMAN', 7698, '1981-02-20 00:00:00', 1600, 300, 30),
   (7902, 'FORD', 'CLERK', 7566, '0198-12-12 00:00:00', 3200, 1200, 20),
   (7934, 'MILLER', 'CLERK', 7782, '1983-01-23 00:00:00', 1300, 1200, 10),
   (7935, 'SCOTT', 'CLERK', NULL, '1989-12-12 00:00:00', 1600, 1200, 20),
-  (7936, 'NOBODY', 'NONE', 7698, '2007-01-01 00:00:00', 1000, NULL, 10),
-  (7937, 'NOBODY2', 'NONE', 7698, '2007-01-01 00:00:00', 1000, NULL, 10);
+  (7936, 'BAKER', 'CLERK', 7698, '2007-01-01 00:00:00', 1000, NULL, 10),
+  (7937, 'JOHN', 'CLERK', 7698, '2007-01-01 00:00:00', 1000, NULL, 10);
