@@ -442,3 +442,4 @@
   EntityPanel.compactPanel field renamed to compactLayout
   EntityPanel.initialize(), moved some code to initializeUI() and bindEvents()
   EntityTablePanel.initializeSummaryPanel() now uses the underlying JTable column model when initializing summary panels
+  Database.DERBY_LONG_DATE_FORMAT added
